scss/site/_navigation.scss
// absolute position for home

.home .main-navigation,
.home .main-small-navigation {
	position: absolute;
	bottom: 0;
	width: 100%;
}

.home .main-small-navigation {
	top: 0;
	bottom: auto;
	z-index: 100;
	border: none;
}

// shared

.main-navigation,
.main-small-navigation {
	@include clearfix();
	background: $green;
	font-family: 'Lato', sans-serif;
	-webkit-font-smoothing: antialiased;

	a {
		display: block;
		text-decoration: none;
		color: #fff;
	}

	a:hover,
	a:focus {
		color: $blue;
	}

	.current_page_item > a,
	.current-menu-item > a {
		background-color: $blue;
		color: #fff;
	}
}

// mobile navigation

.main-small-navigation {

	.menu-toggle {
		@include responsive-text-size('deca');
		margin: 0;
		padding: 0;
		cursor: pointer;
		text-align: center;
		color: #fff;
		letter-spacing: normal;
		padding: 15px 0;

		&.toggled-on {
			background: $red;
		}
	}

	.menu {
		list-style: none;
		margin: 0;
		padding: 0;
		display: none;

		li {

			a {
				padding: 7px 15px;
			}
		}
	}

	.sub-menu {
		list-style: none;
		margin: 0;
		padding: 0;

		li {

			a {
				padding: 7px 0px 7px 30px;
			}

		}
	}
}

// desktop navigation

.main-navigation {
	border-top: 2px solid $blue;
	height: 62px;

	.assistive-text {
		@include sr-only();
	}


	// caution - this class changes with the menu name
	.menu-main-menu-container {
		//@include container( breakpoint('large') );
		display: table;
		width: 100%;

		@include respond-above( 'x-large' ) {
			table-layout: fixed;
		}
	}

	.menu {
		@include responsive-text-size('deca');
		width: 100%;
		margin: 0;
		padding: 0;
		list-style: none;
		display: table-row;

		> li {
			display: table-cell;
			text-align: center;
			position: relative;

			.sub-menu {
				background: $offwhite;
				margin: 0;
				list-style: none;
				padding: 0;
				border-bottom-left-radius: 5px;
				border-bottom-right-radius: 5px;
				display: none;
				position: absolute;
				width: 100%;

				li:last-child a {
					border-bottom-left-radius: 5px;
					border-bottom-right-radius: 5px;
				}

				a {
					color: $blue;

					&:hover {
						color: $green;
					}
				}

				.current_page_item > a,
				.current-menu-item > a {
					color: #fff;
					background: $green;
				}
			}

			&:hover {
				.sub-menu {
					display: block;
				}
			}
		}

	}

	a {
		display: block;
		text-decoration: none;
		color: #fff;
		padding: 17px 7px;

		@include respond-above( 'large' ) {
			padding: 15px 7px;
		}
	}

	a:hover,
	a:focus {
		color: $blue;
	}

	.current_page_item > a,
	.current-menu-item > a,
	.current_page_ancestor > a,
	.current-menu-ancestor > a {
		background-color: $blue;
		color: #fff;
	}
}

